--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
     <section class="text-gray-600 body-font">
       <div class="container flex flex-wrap px-5 py-24 mx-auto items-center">
         <div class="md:w-1/2 md:pr-12 md:py-8 md:border-r md:border-b-0 mb-10 md:mb-0 pb-10 border-b border-gray-200">
-          <video data-aos="fade-right" data-aos-delay="1200" class="w-auto" controls src="/liska.mp4"></video>
+          <video data-aos="fade-right" data-aos-delay="1200" class="w-auto" controls src="/pohadky/liska.mp4"></video>
         </div>
         <div class="flex flex-col md:w-1/2 md:pl-12">
           <h2 class="title-font font-semibold text-gray-800 tracking-wider text-sm mb-3">TAKÉ KE ČTENÍ</h2>
@@ -342,7 +342,7 @@
       </div>
 
       <div class="md:w-1/2 md:pr-12 md:py-8 md:border-l md:border-b-0 mb-10 md:mb-0 pb-10 border-b border-gray-200">
-        <img  data-aos="fade-right" data-aos-delay="1200" class="w-auto p-10" src="/zastavit.jpg"></img>
+        <img  data-aos="fade-right" data-aos-delay="1200" class="w-auto p-10" src="pohadky/zastavit.jpg"></img>
       </div>
 
     </div>
