--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@
           </a>
         </div>
         <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
-          <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Hrnečku var</h2>
-          <p class="leading-relaxed text-base mb-4">O hrnečku, který </p>
+          <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Hrnečku vař</h2>
+          <p class="leading-relaxed text-base mb-4">O hrnečku, který vařil chutnou kaši.</p>
           <a class="text-indigo-500 inline-flex items-center">Přečíst
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
               <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -283,8 +283,8 @@
           </a>
         </div>
         <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
-          <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Neptune</h2>
-          <p class="leading-relaxed text-base mb-4">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+          <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Ošklivé kačátko</h2>
+          <p class="leading-relaxed text-base mb-4">O kačátku, které nikam nepatřilo.</p>
           <a class="text-indigo-500 inline-flex items-center">Přečíst
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
               <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -292,8 +292,8 @@
           </a>
         </div>
         <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
-          <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Melanchole</h2>
-          <p class="leading-relaxed text-base mb-4">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+          <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">O karkulce</h2>
+          <p class="leading-relaxed text-base mb-4">O holčičce, která šla navštívit svoji babičku.</p>
           <a class="text-indigo-500 inline-flex items-center">Přečíst
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
               <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -304,8 +304,8 @@
 
         <div class="flex flex-wrap">
           <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
-            <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Shooting Stars</h2>
-            <p class="leading-relaxed text-base mb-4">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+            <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">O koblížkovi</h2>
+            <p class="leading-relaxed text-base mb-4">O vdolku, který utekl babičce.</p>
             <a class="text-indigo-500 inline-flex items-center">Přečíst
               <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                 <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -313,8 +313,8 @@
             </a>
           </div>
           <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
-            <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">The Catalyzer</h2>
-            <p class="leading-relaxed text-base mb-4">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+            <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Kocour v botách</h2>
+            <p class="leading-relaxed text-base mb-4">O mluvícím kocourovi, který pomohl svému pánovi ke štěstí.</p>
             <a class="text-indigo-500 inline-flex items-center">Přečíst
               <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                 <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -322,8 +322,8 @@
             </a>
           </div>
           <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
-            <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Neptune</h2>
-            <p class="leading-relaxed text-base mb-4">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+            <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">O kohoutkovi a slepičce</h2>
+            <p class="leading-relaxed text-base mb-4">O slepičce, která pomohla kohoutkovi.</p>
             <a class="text-indigo-500 inline-flex items-center">Přečíst
               <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                 <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -331,8 +331,8 @@
             </a>
           </div>
           <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
-            <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Melanchole</h2>
-            <p class="leading-relaxed text-base mb-4">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+            <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">O neposlušných kůzlátkách</h2>
+            <p class="leading-relaxed text-base mb-4">O 7 kůzlátkách, které neposlechli svou mamičku.</p>
             <a class="text-indigo-500 inline-flex items-center">Přečíst
               <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                 <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -343,8 +343,8 @@
 
           <div class="flex flex-wrap">
             <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
-              <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Shooting Stars</h2>
-              <p class="leading-relaxed text-base mb-4">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+              <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">O malence</h2>
+              <p class="leading-relaxed text-base mb-4">O maličké holčičce, kterou unesla ropucha.</p>
               <a class="text-indigo-500 inline-flex items-center">Přečíst
                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                   <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -352,8 +352,8 @@
               </a>
             </div>
             <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
-              <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">The Catalyzer</h2>
-              <p class="leading-relaxed text-base mb-4">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+              <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Otesánek</h2>
+              <p class="leading-relaxed text-base mb-4">O klukovi ze dřeva, co měl pořád hlad.</p>
               <a class="text-indigo-500 inline-flex items-center">Přečíst
                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                   <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -361,8 +361,8 @@
               </a>
             </div>
             <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
-              <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Neptune</h2>
-              <p class="leading-relaxed text-base mb-4">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+              <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Paleček</h2>
+              <p class="leading-relaxed text-base mb-4">O malém klukovi, ketrý nesl tátovi oběd.</p>
               <a class="text-indigo-500 inline-flex items-center">Přečíst
                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                   <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -370,8 +370,8 @@
               </a>
             </div>
             <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
-              <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Melanchole</h2>
-              <p class="leading-relaxed text-base mb-4">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+              <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">O perníkové chaloupce</h2>
+              <p class="leading-relaxed text-base mb-4">O sourozencích, kteří zabloudili v lese.</p>
               <a class="text-indigo-500 inline-flex items-center">Přečíst
                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                   <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -382,8 +382,8 @@
 
             <div class="flex flex-wrap">
               <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
-                <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Shooting Stars</h2>
-                <p class="leading-relaxed text-base mb-4">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+                <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Popelka</h2>
+                <p class="leading-relaxed text-base mb-4">O holce, která očarila prince.</p>
                 <a class="text-indigo-500 inline-flex items-center">Přečíst
                   <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                     <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -391,8 +391,8 @@
                 </a>
               </div>
               <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
-                <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">The Catalyzer</h2>
-                <p class="leading-relaxed text-base mb-4">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+                <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Tři prasátka</h2>
+                <p class="leading-relaxed text-base mb-4">O prasátkách, které přelstili vlka.</p>
                 <a class="text-indigo-500 inline-flex items-center">Přečíst
                   <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                     <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -400,8 +400,8 @@
                 </a>
               </div>
               <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
-                <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Neptune</h2>
-                <p class="leading-relaxed text-base mb-4">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+                <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">O řepě</h2>
+                <p class="leading-relaxed text-base mb-4">O dědečkovi, který vypěspoval obrovskou řepu.</p>
                 <a class="text-indigo-500 inline-flex items-center">Přečíst
                   <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                     <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -409,8 +409,8 @@
                 </a>
               </div>
               <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
-                <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Melanchole</h2>
-                <p class="leading-relaxed text-base mb-4">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+                <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">O šípkové růžence</h2>
+                <p class="leading-relaxed text-base mb-4">O princezně, která prospala 100 let.</p>
                 <a class="text-indigo-500 inline-flex items-center">Přečíst
                   <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                     <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -422,8 +422,8 @@
 
               <div class="flex flex-wrap">
                 <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
-                  <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Shooting Stars</h2>
-                  <p class="leading-relaxed text-base mb-4">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+                  <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">O rybářovi</h2>
+                  <p class="leading-relaxed text-base mb-4">O rybářovi, který chytil zlatou rybku.</p>
                   <a class="text-indigo-500 inline-flex items-center">Přečíst
                     <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                       <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -431,8 +431,8 @@
                   </a>
                 </div>
                 <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
-                  <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">The Catalyzer</h2>
-                  <p class="leading-relaxed text-base mb-4">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+                  <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Skřítkové</h2>
+                  <p class="leading-relaxed text-base mb-4">O dobrodružstvích z říše skřítků.</p>
                   <a class="text-indigo-500 inline-flex items-center">Přečíst
                     <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                       <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -440,8 +440,8 @@
                   </a>
                 </div>
                 <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
-                  <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Neptune</h2>
-                  <p class="leading-relaxed text-base mb-4">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+                  <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Sněhurka</h2>
+                  <p class="leading-relaxed text-base mb-4">O princezně, které záviděla krásu i královná.</p>
                   <a class="text-indigo-500 inline-flex items-center">Přečíst
                     <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                       <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -449,8 +449,8 @@
                   </a>
                 </div>
                 <div class="xl:w-1/4 lg:w-1/2 md:w-full px-8 py-6 border-l-2 border-gray-200 border-opacity-60">
-                  <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Melanchole</h2>
-                  <p class="leading-relaxed text-base mb-4">Fingerstache flexitarian street art 8-bit waistcoat. Distillery hexagon disrupt edison bulbche.</p>
+                  <h2 class="text-lg sm:text-xl text-gray-900 font-medium title-font mb-2">Zlatovláska</h2>
+                  <p class="leading-relaxed text-base mb-4">O holce, kterou zlá čarodějnice zavřela do věže.</p>
                   <a class="text-indigo-500 inline-flex items-center">Přečíst
                     <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                       <path d="M5 12h14M12 5l7 7-7 7"></path>
