--- a/index.html
+++ b/index.html
@@ -1522,38 +1522,38 @@
         </p>
         <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
        
-          <a class="ml-3 text-gray-500">
+          <a class="ml-3 text-gray-400"  href="#kvizy">
             <i class=" fas fa-robot"></i>
           </a>
 
-          <a class="ml-3 text-gray-500">
+          <a class="ml-3 text-gray-500"  href="#pohadky">
             <i class=" fas fa-flag"></i>
           </a>
 
-          <a class="ml-3 text-gray-500">
+          <a class="ml-3 text-gray-400" href="#hry">
             <i class=" fas fa-star"></i>
           </a>
 
-          <a class="ml-3 text-gray-500">
+          <a class="ml-3 text-gray-500" href="#knizky">
             <i class=" fas fa-book"></i>
           </a>
 
-          <a class="ml-3 text-gray-500">
+          <a class="ml-3 text-gray-400" href="#ilustrace">
             <i class=" fas fa-brush"></i>
           </a>
 
-          <a class="ml-3 text-gray-500">
+          <a class="ml-3 text-gray-500" href="#puzzle">
             <i class=" fas fa-image"></i>
           </a>
-          <a class="ml-3 text-gray-500">
+          <a class="ml-3 text-gray-400" href="#hudba">
             <i class=" fas fa-music"></i>
           </a>
 
-          <a class="ml-3 text-gray-500">
+          <a class="ml-3 text-gray-500" href="#vylety">
             <i class=" fas fa-road"></i>
           </a>
 
-          <a class="ml-3 text-gray-500">
+          <a class="ml-3 text-gray-400" href="#pracovni">
             <i class=" fas fa-ruler"></i>
           </a>
 
