--- a/index.html
+++ b/index.html
@@ -429,10 +429,11 @@
               <a class="text-gray-600 hover:text-gray-800" href="https://elaidina.github.io/jazykolamy/" >Jazykolamy</a>
             </li>
             <li class="lg:w-1/3 mb-1 w-1/2">
-              <a class="text-gray-600 hover:text-gray-800">Vtipy</a>
+              <a class="text-gray-600 hover:text-gray-800" href="https://elaidina.github.io/vtipy/">Vtipy</a>
             </li>
             <li class="lg:w-1/3 mb-1 w-1/2">
-              <a class="text-gray-600 hover:text-gray-800">Hádanky</a>
+              <a class="text-gray-600 hover:text-gray-800"
+              href="https://elaidina.github.io/slider/">Angličtina</a>
             </li>
             <li class="lg:w-1/3 mb-1 w-1/2">
               <a class="text-gray-600 hover:text-gray-800" href="https://elaidina.github.io/planets/" >Planets song</a>
